--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -24,19 +24,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "id": "NLUvRQTyWC7b",
       "metadata": {
         "id": "NLUvRQTyWC7b"
       },
       "outputs": [],
       "source": [
-        "#!pip install pyfiglet"
+        "#pip install pyfiglet"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "id": "Tudu9sXyWMnK",
       "metadata": {
         "id": "Tudu9sXyWMnK"
@@ -59,19 +59,19 @@
         "id": "wOprToC5Wlkc"
       },
       "id": "wOprToC5Wlkc",
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
-        "outputId": "11035cd4-42d6-4d35-aa5b-3eefe212cfcf"
+        "outputId": "d0744e2e-a8db-4172-a6ab-49a39c5447e4"
       },
       "outputs": [
         {
@@ -88,7 +88,7 @@
             "\n",
             "Bienvenido a CONTAGRO 🌱\n",
             "\n",
-            " Ingrese su nombre: Lina\n"
+            "Ingrese su nombre: Lina\n"
           ]
         }
       ],
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 12,
       "id": "9503fa17-513f-4061-b2bf-fde14f37aa58",
       "metadata": {
         "id": "9503fa17-513f-4061-b2bf-fde14f37aa58"
@@ -186,8 +186,9 @@
         "    # Mostramos el menú con las opciones disponibles\n",
         "    print(\"Seleccione una opción de nuestro menú:\")\n",
         "    print(\"\\n1.Promedio\")\n",
-        "    print(\"\\n2.Total\")\n",
-        "    print(\"\\n3.Regresar al menú anterior\")\n",
+        "    print(\"\\n2 Total por usuario\")\n",
+        "    print(\"\\n3.Total\")\n",
+        "    print(\"\\n4.Regresar al menú anterior\")\n",
         "    # en la variable opción almacenamos la selección del usuario\n",
         "    opcion = int(input(\"\\nDigite una opción: \"))\n",
         "    # retornamos la variable opcion\n",
@@ -217,12 +218,18 @@
         "          input(\"\\nPresione una tecla para continuar...\")\n",
         "          app(nombre, datos)\n",
         "      elif opcion_2 == 2:\n",
+        "          # Imprimimos el total por usuario\n",
+        "          print(\"\\nEl total por usuario es:\")\n",
+        "          print(datos.groupby(\"Nombre del editor\")[\"Valor ($COP)\"].sum())\n",
+        "          input(\"\\nPresione una tecla para continuar...\")\n",
+        "          app(nombre, datos)\n",
+        "      elif opcion_2 == 3:\n",
         "          # Imprimimos la suma\n",
         "          print(\"\\nEl total por tipo de transacción es:\")\n",
         "          print(datos.groupby(\"Ingreso/Egreso\")[\"Valor ($COP)\"].sum())\n",
         "          input(\"\\nPresione una tecla para continuar...\")\n",
         "          app(nombre, datos)\n",
-        "      elif opcion_2 == 3:\n",
+        "      elif opcion_2 == 4:\n",
         "          # En caso de que el usuario elija la opción 3, llama a la función\n",
         "          # menu\n",
         "          os.system(\"cls\")\n",
@@ -259,14 +266,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 14,
       "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
-        "outputId": "b9d9f1ae-62f6-4216-b556-a9131dfa261a"
+        "outputId": "65e20d60-94ee-4ead-80cb-2b6d31659140"
       },
       "outputs": [
         {
@@ -283,17 +290,17 @@
             "\n",
             "4.Salir\n",
             "\n",
-            " Digite una opción: 1\n",
+            "Digite una opción: 1\n",
             "\n",
-            "Ingrese la fecha de la transacción (DD/MM/YY): 15/11/1982\n",
+            "Ingrese la fecha de la transacción (DD/MM/YY): 01/09/25\n",
             "\n",
-            "Ingrese la descripción de la transacción:Compras\n",
+            "Ingrese la descripción de la transacción:Compra concentrado peces 1lb\n",
             "\n",
             "Ingrese 1 para ingreso o 2 para egreso:2\n",
             "\n",
             "Ingrese 1 para gastos operacionales o 2 para otros gastos: 1\n",
             "\n",
-            "Ingrese el valor de la transacción $COP: 5000\n",
+            "Ingrese el valor de la transacción $COP: 15000\n",
             "\n",
             "La transacción fue registrada, presione una tecla para continuar...\n",
             " Hola Lina, seleccione una opción de nuestro menú:\n",
@@ -306,16 +313,158 @@
             "\n",
             "4.Salir\n",
             "\n",
-            " Digite una opción: 3\n",
-            "        Fecha               Descripción        Ingreso/Egreso  Valor ($COP)  \\\n",
-            "0  01/01/2025  Compra concentrado peces                     1        5000.0   \n",
-            "1  15/11/1982                   Cuentas      Ingreso - Aporte        1563.0   \n",
-            "2  15/11/1982                   Compras  Egreso - Operacional        5000.0   \n",
+            "Digite una opción: 1\n",
             "\n",
-            "  Nombre del editor  \n",
-            "0              Lina  \n",
-            "1              Lina  \n",
-            "2              Lina  \n",
+            "Ingrese la fecha de la transacción (DD/MM/YY): 01/09/25\n",
+            "\n",
+            "Ingrese la descripción de la transacción:Venta pescado 1kg\n",
+            "\n",
+            "Ingrese 1 para ingreso o 2 para egreso:1\n",
+            "\n",
+            "Ingrese 1 para ventas o 2 para aportes: 1\n",
+            "\n",
+            "Ingrese el valor de la transacción $COP: 40000\n",
+            "\n",
+            "La transacción fue registrada, presione una tecla para continuar...\n",
+            " Hola Lina, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "4.Salir\n",
+            "\n",
+            "Digite una opción: 1\n",
+            "\n",
+            "Ingrese la fecha de la transacción (DD/MM/YY): 02/09/25\n",
+            "\n",
+            "Ingrese la descripción de la transacción:Pago aportes Amparo Cano septiembre\n",
+            "\n",
+            "Ingrese 1 para ingreso o 2 para egreso:1\n",
+            "\n",
+            "Ingrese 1 para ventas o 2 para aportes: 2\n",
+            "\n",
+            "Ingrese el valor de la transacción $COP: 50000\n",
+            "\n",
+            "La transacción fue registrada, presione una tecla para continuar...\n",
+            " Hola Lina, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "4.Salir\n",
+            "\n",
+            "Digite una opción: 1\n",
+            "\n",
+            "Ingrese la fecha de la transacción (DD/MM/YY): 02/09/25\n",
+            "\n",
+            "Ingrese la descripción de la transacción:Pago aportes Luz Mary Septiembre\n",
+            "\n",
+            "Ingrese 1 para ingreso o 2 para egreso:1\n",
+            "\n",
+            "Ingrese 1 para ventas o 2 para aportes: 2\n",
+            "\n",
+            "Ingrese el valor de la transacción $COP: 50000\n",
+            "\n",
+            "La transacción fue registrada, presione una tecla para continuar...\n",
+            " Hola Lina, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "4.Salir\n",
+            "\n",
+            "Digite una opción: 1\n",
+            "\n",
+            "Ingrese la fecha de la transacción (DD/MM/YY): 02/09/25\n",
+            "\n",
+            "Ingrese la descripción de la transacción:Pago aportes Sergio Hernán Septiembre\n",
+            "\n",
+            "Ingrese 1 para ingreso o 2 para egreso:1\n",
+            "\n",
+            "Ingrese 1 para ventas o 2 para aportes: 2\n",
+            "\n",
+            "Ingrese el valor de la transacción $COP: 50000\n",
+            "\n",
+            "La transacción fue registrada, presione una tecla para continuar...\n",
+            " Hola Lina, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "4.Salir\n",
+            "\n",
+            "Digite una opción: 1\n",
+            "\n",
+            "Ingrese la fecha de la transacción (DD/MM/YY): 04/09/25\n",
+            "\n",
+            "Ingrese la descripción de la transacción:Venta peces 1lb\n",
+            "\n",
+            "Ingrese 1 para ingreso o 2 para egreso:1\n",
+            "\n",
+            "Ingrese 1 para ventas o 2 para aportes: 1\n",
+            "\n",
+            "Ingrese el valor de la transacción $COP: 20000\n",
+            "\n",
+            "La transacción fue registrada, presione una tecla para continuar...\n",
+            " Hola Lina, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "4.Salir\n",
+            "\n",
+            "Digite una opción: 1\n",
+            "\n",
+            "Ingrese la fecha de la transacción (DD/MM/YY): 05/09/25\n",
+            "\n",
+            "Ingrese la descripción de la transacción:Pago servicios públicos\n",
+            "\n",
+            "Ingrese 1 para ingreso o 2 para egreso:2\n",
+            "\n",
+            "Ingrese 1 para gastos operacionales o 2 para otros gastos: 1\n",
+            "\n",
+            "Ingrese el valor de la transacción $COP: 23800\n",
+            "\n",
+            "La transacción fue registrada, presione una tecla para continuar...\n",
+            " Hola Lina, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "4.Salir\n",
+            "\n",
+            "Digite una opción: 3\n",
+            "      Fecha                            Descripción        Ingreso/Egreso  \\\n",
+            "2  02/09/25    Pago aportes Amparo Cano septiembre      Ingreso - Aporte   \n",
+            "3  02/09/25       Pago aportes Luz Mary Septiembre      Ingreso - Aporte   \n",
+            "4  02/09/25  Pago aportes Sergio Hernán Septiembre      Ingreso - Aporte   \n",
+            "5  04/09/25                        Venta peces 1lb       Ingreso - Venta   \n",
+            "6  05/09/25                Pago servicios públicos  Egreso - Operacional   \n",
+            "\n",
+            "   Valor ($COP) Nombre del editor  \n",
+            "2       50000.0              Lina  \n",
+            "3       50000.0              Lina  \n",
+            "4       50000.0              Lina  \n",
+            "5       20000.0              Lina  \n",
+            "6       23800.0              Lina  \n",
             "\n",
             "Presione una tecla para continuar...\n",
             " Hola Lina, seleccione una opción de nuestro menú:\n",
@@ -328,22 +477,24 @@
             "\n",
             "4.Salir\n",
             "\n",
-            " Digite una opción: 2\n",
-            " Seleccione una opción de nuestro menú:\n",
+            "Digite una opción: 2\n",
+            "Seleccione una opción de nuestro menú:\n",
             "\n",
             "1.Promedio\n",
             "\n",
-            "2.Total\n",
+            "2 Total por usuario\n",
             "\n",
-            "3.Regresar al menú anterior\n",
+            "3.Total\n",
+            "\n",
+            "4.Regresar al menú anterior\n",
             "\n",
             "Digite una opción: 1\n",
             "\n",
             "El valor promedio por tipo de transacción es:\n",
             "Ingreso/Egreso\n",
-            "1                       5000.0\n",
-            "Egreso - Operacional    5000.0\n",
-            "Ingreso - Aporte        1563.0\n",
+            "Egreso - Operacional    19400.0\n",
+            "Ingreso - Aporte        50000.0\n",
+            "Ingreso - Venta         30000.0\n",
             "Name: Valor ($COP), dtype: float64\n",
             "\n",
             "Presione una tecla para continuar...\n",
@@ -357,7 +508,67 @@
             "\n",
             "4.Salir\n",
             "\n",
-            " Digite una opción: 4\n",
+            "Digite una opción: 2\n",
+            "Seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Promedio\n",
+            "\n",
+            "2 Total por usuario\n",
+            "\n",
+            "3.Total\n",
+            "\n",
+            "4.Regresar al menú anterior\n",
+            "\n",
+            "Digite una opción: 2\n",
+            "\n",
+            "El total por usuario es:\n",
+            "Nombre del editor\n",
+            "Lina    248800.0\n",
+            "Name: Valor ($COP), dtype: float64\n",
+            "\n",
+            "Presione una tecla para continuar...\n",
+            " Hola Lina, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "4.Salir\n",
+            "\n",
+            "Digite una opción: 2\n",
+            "Seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Promedio\n",
+            "\n",
+            "2 Total por usuario\n",
+            "\n",
+            "3.Total\n",
+            "\n",
+            "4.Regresar al menú anterior\n",
+            "\n",
+            "Digite una opción: 3\n",
+            "\n",
+            "El total por tipo de transacción es:\n",
+            "Ingreso/Egreso\n",
+            "Egreso - Operacional     38800.0\n",
+            "Ingreso - Aporte        150000.0\n",
+            "Ingreso - Venta          60000.0\n",
+            "Name: Valor ($COP), dtype: float64\n",
+            "\n",
+            "Presione una tecla para continuar...\n",
+            " Hola Lina, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "4.Salir\n",
+            "\n",
+            "Digite una opción: 4\n",
             "\n",
             "Gracias por usar ContAgro\n"
           ]
