--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -59,19 +59,19 @@
         "id": "wOprToC5Wlkc"
       },
       "id": "wOprToC5Wlkc",
-      "execution_count": 8,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 21,
       "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
-        "outputId": "d0744e2e-a8db-4172-a6ab-49a39c5447e4"
+        "outputId": "05beec2c-6066-4e98-816a-b097bf77aabd"
       },
       "outputs": [
         {
@@ -93,7 +93,7 @@
         }
       ],
       "source": [
-        "\n",
+        "os.system(\"cls\")\n",
         "# Guardamos en la variable ascii_banner el mensaje que queremos mostrar\n",
         "ascii_banner = pyfiglet.figlet_format(\"ContAgro\")\n",
         "# Imprimimos la variable ascii_banner\n",
@@ -591,12 +591,12 @@
         "datos"
       ],
       "metadata": {
-        "id": "FWkA8yAfxakc",
-        "outputId": "d909f48d-2da9-455b-8721-323192050df5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "FWkA8yAfxakc",
+        "outputId": "d909f48d-2da9-455b-8721-323192050df5"
       },
       "id": "FWkA8yAfxakc",
       "execution_count": 15,
@@ -999,97 +999,6 @@
       "id": "LbkfH8Pcibjj",
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Formato de fecha\n",
-        "pd.to_datetime(datos[\"Fecha\"],format=\"%d/%m/%y\", errors=\"coerce\")"
-      ],
-      "metadata": {
-        "id": "VUNUbHvGioMt",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 303
-        },
-        "outputId": "5d8cbd5c-306c-4fd9-8c77-16d2b3978c71"
-      },
-      "id": "VUNUbHvGioMt",
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0   2025-09-01\n",
-              "1   2025-09-01\n",
-              "2   2025-09-02\n",
-              "3   2025-09-02\n",
-              "4   2025-09-02\n",
-              "5   2025-09-04\n",
-              "6   2025-09-05\n",
-              "Name: Fecha, dtype: datetime64[ns]"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Fecha</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2025-09-01</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2025-09-01</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2025-09-02</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2025-09-02</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2025-09-02</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>2025-09-04</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>2025-09-05</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> datetime64[ns]</label>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
     }
   ],
   "metadata": {
