--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 12,
       "id": "NLUvRQTyWC7b",
       "metadata": {
         "id": "NLUvRQTyWC7b"
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 13,
       "id": "Tudu9sXyWMnK",
       "metadata": {
         "id": "Tudu9sXyWMnK"
@@ -59,19 +59,19 @@
         "id": "wOprToC5Wlkc"
       },
       "id": "wOprToC5Wlkc",
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 15,
       "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
-        "outputId": "25f5161e-4141-474d-e409-2055e74fdca3"
+        "outputId": "f94c61e4-ad7c-4fe1-bff2-e3542e460fa7"
       },
       "outputs": [
         {
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 16,
       "id": "9503fa17-513f-4061-b2bf-fde14f37aa58",
       "metadata": {
         "id": "9503fa17-513f-4061-b2bf-fde14f37aa58"
@@ -130,6 +130,137 @@
         "    opcion = int(input(\"\\nDigite una opción: \"))\n",
         "    # retornamos la variable opcion\n",
         "    return opcion\n",
+        "\n",
+        "# Definimos la función menu_2 de los resuménes por\n",
+        "# transacción para que el usuario elija entre las\n",
+        "# siguientes opciones: promedio, total\n",
+        "def menu_2():\n",
+        "    # Mostramos el menú con las opciones disponibles\n",
+        "    print(\"Seleccione una opción de nuestro menú:\")\n",
+        "    print(\"\\n1.Promedio\")\n",
+        "    print(\"\\n2 Total por usuario\")\n",
+        "    print(\"\\n3.Total\")\n",
+        "    print(\"\\n4.Regresar al menú anterior\")\n",
+        "    # en la variable opción almacenamos la selección del usuario\n",
+        "    opcion = int(input(\"\\nDigite una opción: \"))\n",
+        "    # retornamos la variable opcion\n",
+        "    return opcion\n",
+        "\n",
+        "# Definimos la función del menu 3, para las opciones del filtrado de las\n",
+        "# transacciones\n",
+        "def menu_3():\n",
+        "    # Mostramos el menú con las opciones disponibles\n",
+        "    print(\"Seleccione una opción de nuestro menú:\")\n",
+        "    # La opción 1 es el filtrado de las transacciones por fecha\n",
+        "    print(\"\\n1.Filtrar por fecha\")\n",
+        "    # en la variable opción almacenamos la selección del usuario\n",
+        "    opcion = int(input(\"\\nDigite una opción: \"))\n",
+        "    # retornamos la variable opcion\n",
+        "    return opcion\n",
+        "\n",
+        "def revisar_opcion(opcion, nombre, datos):\n",
+        "  # Establecemos las condiciones para cada opción del menú\n",
+        "  # Inicializamos la lista de transacciones\n",
+        "  flag = True\n",
+        "  if opcion == 1:\n",
+        "      # En caso de que el usuario elija la opción 1, llama a la función\n",
+        "      # nueva_transaccion\n",
+        "      os.system(\"cls\")\n",
+        "      nueva_transaccion(nombre, datos)\n",
+        "  elif opcion == 2:\n",
+        "      # En caso de que el usuario elija la opción 2, llama a la función\n",
+        "      # menú 2\n",
+        "      os.system(\"cls\")\n",
+        "      opcion_2 = menu_2()\n",
+        "      # Revisamos los condicionales para la opción elegida por el usuario\n",
+        "      # en el menu_2 almacenada en opcion_2\n",
+        "      if opcion_2 == 1:\n",
+        "          # Imprimimos el promedio\n",
+        "          print(\"\\nEl valor promedio por tipo de transacción es:\")\n",
+        "          print(datos.groupby(\"Ingreso/Egreso\")[\"Valor ($COP)\"].mean())\n",
+        "          input(\"\\nPresione una tecla para continuar...\")\n",
+        "          app(nombre, datos)\n",
+        "      elif opcion_2 == 2:\n",
+        "          # Imprimimos el total por usuario\n",
+        "          print(\"\\nEl total por usuario es:\")\n",
+        "          print(datos.groupby(\"Nombre del editor\")[\"Valor ($COP)\"].sum())\n",
+        "          input(\"\\nPresione una tecla para continuar...\")\n",
+        "          app(nombre, datos)\n",
+        "      elif opcion_2 == 3:\n",
+        "          # Imprimimos la suma\n",
+        "          print(\"\\nEl total por tipo de transacción es:\")\n",
+        "          print(datos.groupby(\"Ingreso/Egreso\")[\"Valor ($COP)\"].sum())\n",
+        "          input(\"\\nPresione una tecla para continuar...\")\n",
+        "          app(nombre, datos)\n",
+        "      elif opcion_2 == 4:\n",
+        "          # En caso de que el usuario elija la opción 3, llama a la función\n",
+        "          # menu\n",
+        "          os.system(\"cls\")\n",
+        "          app(nombre, datos)\n",
+        "      else:\n",
+        "          print(\"\\nLa opción seleccionada no es correcta\")\n",
+        "          print(\"\\nVuelva a intentarlo\")\n",
+        "          print(\"\\n\")\n",
+        "          app(nombre, datos)\n",
+        "  elif opcion == 3:\n",
+        "      # En caso de que el usuario elija la opción 3, llama a la función\n",
+        "      # menu_3\n",
+        "      os.system(\"cls\")\n",
+        "      opcion_3 = menu_3()\n",
+        "      # Revisamos los condicionales para la opción elegida por el usuario\n",
+        "      # en el menu_3 almacenada en opcion_3\n",
+        "      if opcion_3 == 1:\n",
+        "          # La primera opción del menú 3 es el filtrado por fecha,\n",
+        "          # para ello debemos preguntar al usuario la fecha\n",
+        "          # por la que desea filtrar las transacciones\n",
+        "          fecha = input('\\nIngrese la fecha que desea consultar (DD/MM/YY): ')\n",
+        "          # seleccionamos todas las filas que tengan en la columna\n",
+        "          # Fecha la fecha ingresada por el usuario\n",
+        "          filas_filtradas = datos[datos['Fecha'] == fecha]\n",
+        "          # Imprimimos el resultado\n",
+        "          print(filas_filtradas)\n",
+        "          # Volvemos al menú principal (depende de cada aplicación)\n",
+        "          input(\"\\nPresione una tecla para continuar...\")\n",
+        "          app(nombre, datos)\n",
+        "      elif opcion_3 == 2:\n",
+        "          # En caso de que el usuario elija la opción 2, llama a la función\n",
+        "          # que permite seleccionar el tipo. En la variable tipo se almacena\n",
+        "          # la elección del usuario\n",
+        "          tipo = input('Ingrese el tipo de cuenta de quiere consultar\\\n",
+        "                      Ingreso - Venta, Ingreso - Aportes, Egreso - Operacional,\\\n",
+        "                      Egreso - Otros')\n",
+        "          # seleccionamos las filas que tengan por tipo el dato ingresado por el\n",
+        "          # usuario\n",
+        "          filas_filtradas = datos[datos['Ingreso/Egreso'] == tipo]\n",
+        "          # Imprimimos el resultado\n",
+        "          print(filas_filtradas)\n",
+        "          # Volvemos al menú principal\n",
+        "          input(\"\\nPresione una tecla para continuar...\")\n",
+        "          app(nombre, datos)\n",
+        "\n",
+        "      else:\n",
+        "          # En caso de que el usuario ingrese una opción no válida\n",
+        "          print(\"\\nLa opción seleccionada no es correcta\")\n",
+        "          print(\"\\nVuelva a intentarlo\")\n",
+        "          print(\"\\n\")\n",
+        "          app(nombre, datos)\n",
+        "  elif opcion == 4:\n",
+        "      # En caso de que el usuario elija la opcón 3, llama a  la función\n",
+        "      # ultimas_transacciones\n",
+        "      os.system(\"cls\")\n",
+        "      ultimas_transacciones(datos)\n",
+        "      input(\"\\nPresione una tecla para continuar...\")\n",
+        "      app(nombre, datos)\n",
+        "  elif opcion == 5:\n",
+        "      # Salimos de la aplicación\n",
+        "      print(\"\\nGracias por usar ContAgro\")\n",
+        "      flag = False\n",
+        "  else:\n",
+        "      print(\"\\nEsa opción no está dentro de nuestro menú\")\n",
+        "      print(\"\\nVuelva a intentarlo\")\n",
+        "      print(\"\\n\")\n",
+        "      app(nombre, datos)\n",
+        "  return flag\n",
         "\n",
         "# Construimos la función de la nueva transacción\n",
         "def nueva_transaccion(nombre, datos):\n",
@@ -181,121 +312,7 @@
         "    # Imprimimos las últimas 5 transacciones almacenadas en datos\n",
         "    print(datos.tail(5))\n",
         "\n",
-        "# Definimos la función menu_2 para que el usuario elija entre las\n",
-        "# siguientes opciones: promedio, total\n",
-        "def menu_2():\n",
-        "    # Mostramos el menú con las opciones disponibles\n",
-        "    print(\"Seleccione una opción de nuestro menú:\")\n",
-        "    print(\"\\n1.Promedio\")\n",
-        "    print(\"\\n2 Total por usuario\")\n",
-        "    print(\"\\n3.Total\")\n",
-        "    print(\"\\n4.Regresar al menú anterior\")\n",
-        "    # en la variable opción almacenamos la selección del usuario\n",
-        "    opcion = int(input(\"\\nDigite una opción: \"))\n",
-        "    # retornamos la variable opcion\n",
-        "    return opcion\n",
-        "\n",
-        "def menu_3():\n",
-        "    # Mostramos el menú con las opciones disponibles\n",
-        "    print(\"Seleccione una opción de nuestro menú:\")\n",
-        "    # La opción 1 es el filtrado de las transacciones por fecha\n",
-        "    print(\"\\n1.Filtrar por fecha\")\n",
-        "    # en la variable opción almacenamos la selección del usuario\n",
-        "    opcion = int(input(\"\\nDigite una opción: \"))\n",
-        "    # retornamos la variable opcion\n",
-        "    return opcion\n",
-        "\n",
-        "def revisar_opcion(opcion, nombre, datos):\n",
-        "  # Establecemos las condiciones para cada opción del menú\n",
-        "  # Inicializamos la lista de transacciones\n",
-        "  flag = True\n",
-        "\n",
-        "  if opcion == 1:\n",
-        "      # En caso de que el usuario elija la opción 1, llama a la función\n",
-        "      # nueva_transaccion\n",
-        "      os.system(\"cls\")\n",
-        "      nueva_transaccion(nombre, datos)\n",
-        "  elif opcion == 2:\n",
-        "      # En caso de que el usuario elija la opción 2, llama a la función\n",
-        "      # menú 2\n",
-        "      os.system(\"cls\")\n",
-        "      opcion_2 = menu_2()\n",
-        "      # Revisamos los condicionales para la opción elegida por el usuario\n",
-        "      # en el menu_2 almacenada en opcion_2\n",
-        "      if opcion_2 == 1:\n",
-        "          # Imprimimos el promedio\n",
-        "          print(\"\\nEl valor promedio por tipo de transacción es:\")\n",
-        "          print(datos.groupby(\"Ingreso/Egreso\")[\"Valor ($COP)\"].mean())\n",
-        "          input(\"\\nPresione una tecla para continuar...\")\n",
-        "          app(nombre, datos)\n",
-        "      elif opcion_2 == 2:\n",
-        "          # Imprimimos el total por usuario\n",
-        "          print(\"\\nEl total por usuario es:\")\n",
-        "          print(datos.groupby(\"Nombre del editor\")[\"Valor ($COP)\"].sum())\n",
-        "          input(\"\\nPresione una tecla para continuar...\")\n",
-        "          app(nombre, datos)\n",
-        "      elif opcion_2 == 3:\n",
-        "          # Imprimimos la suma\n",
-        "          print(\"\\nEl total por tipo de transacción es:\")\n",
-        "          print(datos.groupby(\"Ingreso/Egreso\")[\"Valor ($COP)\"].sum())\n",
-        "          input(\"\\nPresione una tecla para continuar...\")\n",
-        "          app(nombre, datos)\n",
-        "      elif opcion_2 == 4:\n",
-        "          # En caso de que el usuario elija la opción 3, llama a la función\n",
-        "          # menu\n",
-        "          os.system(\"cls\")\n",
-        "          app(nombre, datos)\n",
-        "      else:\n",
-        "          print(\"\\nLa opción seleccionada no es correcta\")\n",
-        "          print(\"\\nVuelva a intentarlo\")\n",
-        "          print(\"\\n\")\n",
-        "          app(nombre, datos)\n",
-        "\n",
-        "  elif opcion == 3:\n",
-        "      # En caso de que el usuario elija la opción 3, llama a la función\n",
-        "      # menu_3\n",
-        "      os.system(\"cls\")\n",
-        "      opcion_3 = menu_3()\n",
-        "      # Revisamos los condicionales para la opción elegida por el usuario\n",
-        "      # en el menu_3 almacenada en opcion_3\n",
-        "      if opcion_3 == 1:\n",
-        "          # La primera opción del menú 3 es el filtrado por fecha,\n",
-        "          # para ello debemos preguntar al usuario la fecha\n",
-        "          # por la que desea filtrar las transacciones\n",
-        "          fecha = input('\\nIngrese la fecha que desea consultar (DD/MM/YY): ')\n",
-        "          # seleccionamos todas las filas que tengan en la columna\n",
-        "          # Fecha la fecha ingresada por el usuario\n",
-        "          filas_filtradas = datos[datos['Fecha'] == fecha]\n",
-        "          # Imprimimos el resultado\n",
-        "          print(filas_filtradas)\n",
-        "          # Volvemos al menú principal (depende de cada aplicación)\n",
-        "          input(\"\\nPresione una tecla para continuar...\")\n",
-        "          app(nombre, datos)\n",
-        "      else:\n",
-        "          # En caso de que el usuario ingrese una opción no válida\n",
-        "          print(\"\\nLa opción seleccionada no es correcta\")\n",
-        "          print(\"\\nVuelva a intentarlo\")\n",
-        "          print(\"\\n\")\n",
-        "          app(nombre, datos)\n",
-        "  elif opcion == 4:\n",
-        "      # En caso de que el usuario elija la opcón 3, llama a  la función\n",
-        "      # ultimas_transacciones\n",
-        "      os.system(\"cls\")\n",
-        "      ultimas_transacciones(datos)\n",
-        "      input(\"\\nPresione una tecla para continuar...\")\n",
-        "      app(nombre, datos)\n",
-        "  elif opcion == 5:\n",
-        "      # Salimos de la aplicación\n",
-        "      print(\"\\nGracias por usar ContAgro\")\n",
-        "      flag = False\n",
-        "  else:\n",
-        "      print(\"\\nEsa opción no está dentro de nuestro menú\")\n",
-        "      print(\"\\nVuelva a intentarlo\")\n",
-        "      print(\"\\n\")\n",
-        "      app(nombre, datos)\n",
-        "  return flag\n",
-        "\n",
-        "\n",
+        "# Función que me permite el funcionamiento continuo de la aplicación\n",
         "def app(nombre, datos):\n",
         "  os.system(\"cls\")\n",
         "  opcion = menu(nombre)\n",
@@ -304,14 +321,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 17,
       "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
-        "outputId": "5175ca9b-7a79-4d93-ee69-079d6e4cbfeb"
+        "outputId": "a0b38707-78aa-44b2-842a-e1277e95f16c"
       },
       "outputs": [
         {
@@ -324,24 +341,23 @@
             "\n",
             "2.Resumir por transacción\n",
             "\n",
-            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "3.Filtrar transacciones\n",
             "\n",
-            "4.Salir\n",
+            "4.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "5.Salir\n",
             "\n",
             "Digite una opción: 3\n",
-            "      Fecha                            Descripción        Ingreso/Egreso  \\\n",
-            "3  02/09/25       Pago aportes Luz Mary Septiembre      Ingreso - Aporte   \n",
-            "4  02/09/25  Pago aportes Sergio Hernán Septiembre      Ingreso - Aporte   \n",
-            "5  04/09/25                        Venta peces 1lb       Ingreso - Venta   \n",
-            "6  05/09/25                Pago servicios públicos  Egreso - Operacional   \n",
-            "7  09/09/25                      Venta pescado 1Kg       Ingreso - Venta   \n",
+            "Seleccione una opción de nuestro menú:\n",
             "\n",
-            "   Valor ($COP) Nombre del editor  \n",
-            "3         50000              Lina  \n",
-            "4         50000              Lina  \n",
-            "5         20000              Lina  \n",
-            "6         23800              Lina  \n",
-            "7         40000             María  \n",
+            "1.Filtrar por fecha\n",
+            "\n",
+            "Digite una opción: 1\n",
+            "\n",
+            "Ingrese la fecha que desea consultar (DD/MM/YY): 01/01/25\n",
+            "Empty DataFrame\n",
+            "Columns: [Fecha, Descripción, Ingreso/Egreso, Valor ($COP), Nombre del editor]\n",
+            "Index: []\n",
             "\n",
             "Presione una tecla para continuar...\n",
             " Hola María, seleccione una opción de nuestro menú:\n",
@@ -350,11 +366,42 @@
             "\n",
             "2.Resumir por transacción\n",
             "\n",
-            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "3.Filtrar transacciones\n",
             "\n",
-            "4.Salir\n",
+            "4.Visualizar las últimas cinco (5) transacciones\n",
             "\n",
-            "Digite una opción: 4\n",
+            "5.Salir\n",
+            "\n",
+            "Digite una opción: 3\n",
+            "Seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Filtrar por fecha\n",
+            "\n",
+            "Digite una opción: 1\n",
+            "\n",
+            "Ingrese la fecha que desea consultar (DD/MM/YY): 01/09/25\n",
+            "      Fecha                   Descripción        Ingreso/Egreso  Valor ($COP)  \\\n",
+            "0  01/09/25  Compra concentrado peces 1lb  Egreso - Operacional         15000   \n",
+            "1  01/09/25             Venta pescado 1kg       Ingreso - Venta         40000   \n",
+            "\n",
+            "  Nombre del editor  \n",
+            "0              Lina  \n",
+            "1              Lina  \n",
+            "\n",
+            "Presione una tecla para continuar...\n",
+            " Hola María, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Filtrar transacciones\n",
+            "\n",
+            "4.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "5.Salir\n",
+            "\n",
+            "Digite una opción: 5\n",
             "\n",
             "Gracias por usar ContAgro\n"
           ]
@@ -381,7 +428,7 @@
         "id": "LbkfH8Pcibjj"
       },
       "id": "LbkfH8Pcibjj",
-      "execution_count": 11,
+      "execution_count": 18,
       "outputs": []
     }
   ],
