Se creó con Colab

--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 23,
       "id": "9503fa17-513f-4061-b2bf-fde14f37aa58",
       "metadata": {
         "id": "9503fa17-513f-4061-b2bf-fde14f37aa58"
@@ -153,6 +153,10 @@
         "    print(\"Seleccione una opción de nuestro menú:\")\n",
         "    # La opción 1 es el filtrado de las transacciones por fecha\n",
         "    print(\"\\n1.Filtrar por fecha\")\n",
+        "    # La opción 2 es el filtrado de las transacciones por tipo\n",
+        "    print(\"\\n2.Filtrar por tipo\")\n",
+        "    # La opción 3 es el filtrado de las transacciones por Editor o Usuario\n",
+        "    print(\"\\n3. Filtrar por usuario\")\n",
         "    # en la variable opción almacenamos la selección del usuario\n",
         "    opcion = int(input(\"\\nDigite una opción: \"))\n",
         "    # retornamos la variable opcion\n",
@@ -226,9 +230,7 @@
         "          # En caso de que el usuario elija la opción 2, llama a la función\n",
         "          # que permite seleccionar el tipo. En la variable tipo se almacena\n",
         "          # la elección del usuario\n",
-        "          tipo = input('Ingrese el tipo de cuenta de quiere consultar\\\n",
-        "                      Ingreso - Venta, Ingreso - Aportes, Egreso - Operacional,\\\n",
-        "                      Egreso - Otros')\n",
+        "          tipo = input('Ingrese el tipo de cuenta de quiere consultar \\nIngreso - Venta, Ingreso - Aporte, Egreso - Operacional, Egreso - Otros')\n",
         "          # seleccionamos las filas que tengan por tipo el dato ingresado por el\n",
         "          # usuario\n",
         "          filas_filtradas = datos[datos['Ingreso/Egreso'] == tipo]\n",
@@ -237,7 +239,18 @@
         "          # Volvemos al menú principal\n",
         "          input(\"\\nPresione una tecla para continuar...\")\n",
         "          app(nombre, datos)\n",
-        "\n",
+        "      elif opcion_3 == 3:\n",
+        "          # En caso de que el usuario elija la opción 3, se filtra\n",
+        "          # por editor o Nombre del editor\n",
+        "          editor = input('Ingrese el nombre del usuario que desea consultar: ')\n",
+        "          # seleccionamos las filas que tengan por Nombre del editor el usuario\n",
+        "          # elegido\n",
+        "          filas_filtradas = datos[datos['Nombre del editor'] == editor]\n",
+        "          # Imprimimos el resultado\n",
+        "          print(filas_filtradas)\n",
+        "          # Volvemos al menú principal\n",
+        "          input(\"\\nPresione una tecla para continuar...\")\n",
+        "          app(nombre, datos)\n",
         "      else:\n",
         "          # En caso de que el usuario ingrese una opción no válida\n",
         "          print(\"\\nLa opción seleccionada no es correcta\")\n",
@@ -269,10 +282,10 @@
         "    # solicita ingresar la descripción de la transacción (concepto)\n",
         "    concepto = input(\"\\nIngrese la descripción de la transacción:\")\n",
         "    # En cuenta se ingresa 1 para ingreso o 2 para egreso\n",
-        "    cuenta = input(\"\\nIngrese 1 para ingreso o 2 para egreso:\")\n",
+        "    cuenta = input(\"\\nIngrese 1 para Ingreso o 2 para Egreso:\")\n",
         "    # Si es un ingreso, en complemento se pregunta si es una venta o un aporte\n",
         "    if cuenta == \"1\":\n",
-        "        complemento = input(\"\\nIngrese 1 para ventas o 2 para aportes: \")\n",
+        "        complemento = input(\"\\nIngrese 1 para Ventas o 2 para Aportes: \")\n",
         "        if complemento == \"1\":\n",
         "            # Genera el nombre completo de la cuenta, ya sea venta o aporte\n",
         "            cuenta = \"Ingreso - Venta\"\n",
@@ -284,7 +297,7 @@
         "    # Si es un egreso, pregunta si es operacional o es otro tipo de gasto\n",
         "    elif cuenta == \"2\":\n",
         "        # Genera el nombre completo de la cuenta\n",
-        "        complemento = input(\"\\nIngrese 1 para gastos operacionales o 2 para otros gastos: \")\n",
+        "        complemento = input(\"\\nIngrese 1 para Gastos Operacionales o 2 para Otros Gastos: \")\n",
         "        if complemento == \"1\":\n",
         "            cuenta = \"Egreso - Operacional\"\n",
         "        elif complemento == \"2\":\n",
@@ -321,14 +334,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 24,
       "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
-        "outputId": "a0b38707-78aa-44b2-842a-e1277e95f16c"
+        "outputId": "edce495c-dda2-4b81-8701-90deeba7af4e"
       },
       "outputs": [
         {
@@ -352,9 +365,11 @@
             "\n",
             "1.Filtrar por fecha\n",
             "\n",
-            "Digite una opción: 1\n",
+            "2. Filtrar por tipo\n",
             "\n",
-            "Ingrese la fecha que desea consultar (DD/MM/YY): 01/01/25\n",
+            "Digite una opción: 2\n",
+            "Ingrese el tipo de cuenta de quiere consultar \n",
+            "Ingreso - Venta, Ingreso - Aportes, Egreso - Operacional, Egreso - OtrosIngreso - Aportes\n",
             "Empty DataFrame\n",
             "Columns: [Fecha, Descripción, Ingreso/Egreso, Valor ($COP), Nombre del editor]\n",
             "Index: []\n",
@@ -377,16 +392,110 @@
             "\n",
             "1.Filtrar por fecha\n",
             "\n",
-            "Digite una opción: 1\n",
+            "2. Filtrar por tipo\n",
             "\n",
-            "Ingrese la fecha que desea consultar (DD/MM/YY): 01/09/25\n",
+            "Digite una opción: 2\n",
+            "Ingrese el tipo de cuenta de quiere consultar \n",
+            "Ingreso - Venta, Ingreso - Aportes, Egreso - Operacional, Egreso - OtrosEgreso - Operacional\n",
             "      Fecha                   Descripción        Ingreso/Egreso  Valor ($COP)  \\\n",
             "0  01/09/25  Compra concentrado peces 1lb  Egreso - Operacional         15000   \n",
-            "1  01/09/25             Venta pescado 1kg       Ingreso - Venta         40000   \n",
+            "6  05/09/25       Pago servicios públicos  Egreso - Operacional         23800   \n",
             "\n",
             "  Nombre del editor  \n",
             "0              Lina  \n",
+            "6              Lina  \n",
+            "\n",
+            "Presione una tecla para continuar...\n",
+            " Hola María, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Filtrar transacciones\n",
+            "\n",
+            "4.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "5.Salir\n",
+            "\n",
+            "Digite una opción: 3\n",
+            "Seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Filtrar por fecha\n",
+            "\n",
+            "2. Filtrar por tipo\n",
+            "\n",
+            "Digite una opción: 2\n",
+            "Ingrese el tipo de cuenta de quiere consultar \n",
+            "Ingreso - Venta, Ingreso - Aportes, Egreso - Operacional, Egreso - OtrosIngreso - Venta\n",
+            "      Fecha        Descripción   Ingreso/Egreso  Valor ($COP)  \\\n",
+            "1  01/09/25  Venta pescado 1kg  Ingreso - Venta         40000   \n",
+            "5  04/09/25    Venta peces 1lb  Ingreso - Venta         20000   \n",
+            "7  09/09/25  Venta pescado 1Kg  Ingreso - Venta         40000   \n",
+            "\n",
+            "  Nombre del editor  \n",
             "1              Lina  \n",
+            "5              Lina  \n",
+            "7             María  \n",
+            "\n",
+            "Presione una tecla para continuar...\n",
+            " Hola María, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Filtrar transacciones\n",
+            "\n",
+            "4.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "5.Salir\n",
+            "\n",
+            "Digite una opción: 4\n",
+            "      Fecha                            Descripción        Ingreso/Egreso  \\\n",
+            "3  02/09/25       Pago aportes Luz Mary Septiembre      Ingreso - Aporte   \n",
+            "4  02/09/25  Pago aportes Sergio Hernán Septiembre      Ingreso - Aporte   \n",
+            "5  04/09/25                        Venta peces 1lb       Ingreso - Venta   \n",
+            "6  05/09/25                Pago servicios públicos  Egreso - Operacional   \n",
+            "7  09/09/25                      Venta pescado 1Kg       Ingreso - Venta   \n",
+            "\n",
+            "   Valor ($COP) Nombre del editor  \n",
+            "3         50000              Lina  \n",
+            "4         50000              Lina  \n",
+            "5         20000              Lina  \n",
+            "6         23800              Lina  \n",
+            "7         40000             María  \n",
+            "\n",
+            "Presione una tecla para continuar...\n",
+            " Hola María, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Filtrar transacciones\n",
+            "\n",
+            "4.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "5.Salir\n",
+            "\n",
+            "Digite una opción: 3\n",
+            "Seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Filtrar por fecha\n",
+            "\n",
+            "2. Filtrar por tipo\n",
+            "\n",
+            "Digite una opción: 2\n",
+            "Ingrese el tipo de cuenta de quiere consultar \n",
+            "Ingreso - Venta, Ingreso - Aportes, Egreso - Operacional, Egreso - OtrosIngreso - Aporte\n",
+            "      Fecha                            Descripción    Ingreso/Egreso  \\\n",
+            "3  02/09/25       Pago aportes Luz Mary Septiembre  Ingreso - Aporte   \n",
+            "4  02/09/25  Pago aportes Sergio Hernán Septiembre  Ingreso - Aporte   \n",
+            "\n",
+            "   Valor ($COP) Nombre del editor  \n",
+            "3         50000              Lina  \n",
+            "4         50000              Lina  \n",
             "\n",
             "Presione una tecla para continuar...\n",
             " Hola María, seleccione una opción de nuestro menú:\n",
